# shared

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
src/: api_client.rs  auth.rs  chat.rs  chat_simple.rs  compliance.rs  emergency_simple.rs  errors.rs  events.rs  healthcare_service_engine.rs  lib.rs  location_simple.rs  models.rs  utils.rs  websocket.rs  websocket_simple.rs
src/ui/: alert.rs  alert_old.rs  badge.rs  badge_old.rs  button.rs  card.rs  emergency.rs  healthcare.rs  input.rs  misc.rs  misc_old.rs  mod.rs  simple_healthcare.rs  styles.css
src/ui/icons/: mod.rs
src/ui/layout/: enhanced.rs  mod.rs  mod_broken.rs  simple.rs
