[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "MyDR24 Shared Library - Complete healthcare platform components, models, auth, compliance, and UI"
license = "MIT"
repository = "https://github.com/mydr24/shared"
homepage = "https://github.com/mydr24"
documentation = "https://docs.rs/docs"
readme = "README.md"
keywords = ["healthcare", "leptos", "ui", "medical", "hipaa"]
categories = ["web-programming", "gui", "api-bindings"]
authors = ["MyDR24 Team <dev@mydr24.com>"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Random generation (with WASM support)
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Leptos dependencies for UI components (optional for backend)
leptos = { version = "0.8", features = ["csr"], optional = true }
leptos_meta = { version = "0.8", optional = true }
leptos_router = { version = "0.8", optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Navigator",
    "Geolocation",
    "Position",
    "PositionError",
    "PositionOptions",
    "Coordinates"
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# WebSocket and networking (optional for backend)
gloo-net = { version = "0.6", features = ["websocket"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
futures = { version = "0.3", optional = true }
log = "0.4"
base64 = "0.22"
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

# Healthcare-specific dependencies
validator = { version = "0.18", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
regex = "1.0"

# Backend dependencies (from mydr24-core)
sha2 = "0.10"

# Post-Quantum Cryptography (optional)
pqcrypto-dilithium = { version = "0.3", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

# Timezone support
chrono-tz = "0.8"

[features]
default = ["ui", "models"]
ui = ["leptos", "leptos_meta", "leptos_router", "web-sys", "wasm-bindgen", "gloo-net", "gloo-timers", "futures", "wasm-bindgen-futures", "js-sys"]
models = []
auth = []
compliance = ["healthcare-compliance"]
healthcare-compliance = []
post-quantum = ["pqcrypto-dilithium", "pqcrypto-traits"]
audit-logging = []

[lib]
name = "shared"
path = "src/lib.rs"
